--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>GALERIA DE POKÉMON</h1>
+        <h1>GALERIA DE POKÉMON.</h1>
         <p>Explore sua coleção de Pokémons e descubra mais sobre eles!</p>
     </header>
 
